--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "start": "python -m http.server 8000",
     "dev": "python -m http.server 8000"
   },
-  "keywords": ["pwa", "voice", "journal", "llm", "chat"],
+  "keywords": [
+    "pwa",
+    "voice",
+    "journal",
+    "llm",
+    "chat"
+  ],
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "@supabase/supabase-js": "^2.75.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
   }
 }
