Add automatic API key configuration system
- Add config.js with placeholder values for easy setup
- Add my-keys.js for personal API keys (gitignored)
- Add setup-config.js interactive configuration script
- Update app.js to load keys from multiple sources
- Update .gitignore to protect personal API keys
- Add npm run setup command for easy configuration
- Improve settings UI to show configuration source

Users can now:
1. Run 'npm run setup' for interactive setup
2. Edit my-keys.js for personal keys (stays local)
3. Edit config.js for shared configuration

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "A PWA for voice conversations with LLM for daily journaling",
   "main": "index.html",
   "scripts": {
-    "start": "python -m http.server 8000",
-    "dev": "python -m http.server 8000"
+    "start": "node server.js",
+    "dev": "node server.js",
+    "setup": "node setup-config.js",
+    "serve": "python3 -m http.server 8000"
   },
   "keywords": [
     "pwa",
