--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,12 @@ jspm_packages/
 
 # dotenv environment variables file
 .env
+.env.local
+.env.production
+.env.development
+
+# Personal API keys (DO NOT COMMIT)
+my-keys.js
 
 # IDE files
 .vscode/
