Fix PWA installation and manifest issues
- Fix manifest.json start_url to use relative path for GitHub Pages
- Improve service worker to handle PWA navigation requests better
- Add PWA-specific fallback for navigation requests
- Create pwa-install-test.html for diagnosing PWA installation issues
- Add beforeinstallprompt event handling for PWA installation
- Fix service worker scope and navigation handling for PWA mode
- Should resolve PWA installation and 404 errors on mobile

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Voice Journal - Daily Conversations",
   "short_name": "Voice Journal",
   "description": "Voice-powered journal with AI conversations for daily reflection",
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#6366f1",
