--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "voice-journal-pwa",
+  "name": "voice-journal",
   "version": "1.0.0",
-  "description": "A PWA for voice conversations with LLM for daily journaling",
-  "main": "index.html",
+  "description": "Voice-powered journaling app with AI title generation",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
-    "setup": "node setup-config.js",
-    "serve": "python3 -m http.server 8000"
+    "build": "echo 'No build step needed for static files'",
+    "serve": "python3 -m http.server 3001"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   },
   "keywords": [
-    "pwa",
-    "voice",
     "journal",
-    "llm",
-    "chat"
+    "voice",
+    "ai",
+    "openai",
+    "speech-recognition"
   ],
-  "author": "Your Name",
-  "license": "MIT",
-  "dependencies": {
-    "@supabase/supabase-js": "^2.75.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
-  }
+  "author": "Voice Journal App",
+  "license": "MIT"
 }
