Add daily push notifications for journal reminders
- Created service worker (sw.js) for background notifications
- Added notification settings page with time picker and custom messages
- Implemented IndexedDB storage for notification preferences
- Added notification permission handling and scheduling
- Created settings link on main journal page
- Notifications work even when app is closed
- Users can customize reminder time and message
- Includes test notification functionality

--- a/manifest.json
+++ b/manifest.json
@@ -59,5 +59,9 @@
   ],
   "categories": ["productivity", "lifestyle", "utilities"],
   "lang": "en",
-  "dir": "ltr"
+  "dir": "ltr",
+  "permissions": ["notifications"],
+  "background": {
+    "scripts": ["sw.js"]
+  }
 }
